feat(bookmarks): add bookmark API
